--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.10.2",
